--- a/src/www/static/index.html
+++ b/src/www/static/index.html
@@ -1,1 +1,12 @@
-kokosnöt
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Coconut</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="modules/ipfs/dist/index.min.js"></script>
+    <script src="script.js"></script>
+</head>
+<body>
+    Kokosnöt
+</body>
+</html>
