Modified core scripts to make them work in a browser

--- a/src/www/static/index.html
+++ b/src/www/static/index.html
@@ -3,7 +3,15 @@
 <head>
     <title>Coconut</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="modules/ipfs/dist/index.min.js"></script>
+    <script src="modules/ipfs-api/dist/index.js"></script>
+    <script src="modules/orbit-db/dist/orbitdb.min.js"></script>
+    <script src="modules/crypto-js/crypto-js.js"></script>
+    <script src="modules/tweetnacl/nacl-fast.min.js"></script>
+    <script src="modules/tweetnacl-util/nacl-util.min.js"></script>
+    <script src="core/utils.js"></script>
+    <script src="core/encryption.js"></script>
+    <script src="core/db.js"></script>
+    <script src="core/coconut.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
