Made it possible to connect and list entries in web interface

--- a/src/www/static/index.html
+++ b/src/www/static/index.html
@@ -15,6 +15,12 @@
     <script src="script.js"></script>
 </head>
 <body>
-    Kokosnöt
+    <form onsubmit="return passwordEntered(this)">
+        <span id="incorrectPassword"></span>
+        <input type="password" name="password" />
+        <input type="submit" value="Please open my coconut" />
+    </form>
+    <ul>
+    </ul>
 </body>
 </html>
