Implemented password copying

--- a/src/www/static/index.html
+++ b/src/www/static/index.html
@@ -34,7 +34,8 @@
         <div>Username: <span id="username"></span></div>
         <div>URL: <span id="url"></span></div>
         <div>Notes: <span id="notes"></span></div>
-        <a href="#">Copy password (Not implemented yet)</a>
+        <input type="text" id="password" />
+        <a href="#" onclick="copyPassword()">Copy password</a>
     </div>
 
     <a href="#" onclick="add()" />+</a>
