--- a/src/www/static/index.html
+++ b/src/www/static/index.html
@@ -9,6 +9,7 @@
     <script src="modules/tweetnacl/nacl-fast.min.js"></script>
     <script src="modules/tweetnacl-util/nacl-util.min.js"></script>
     <script src="core/utils.js"></script>
+    <script src="core/serverCommunication.js"></script>
     <script src="core/encryption.js"></script>
     <script src="core/db.js"></script>
     <script src="core/coconut.js"></script>
