Corrected visibility for website elements

--- a/src/www/static/index.html
+++ b/src/www/static/index.html
@@ -32,6 +32,8 @@
 
     <div id="entry">
         <a href="#" id="close" onclick="closeEntry()">✕</a>
+        <a href="#" id="edit">Edit</a>
+        <a href="#" id="delete">Delete</a>
         <div>Service: <span id="service"></span></div>
         <div>Username: <span id="username"></span></div>
         <div>URL: <span id="url"></span></div>
