Replaced password generator

--- a/src/www/static/index.html
+++ b/src/www/static/index.html
@@ -9,6 +9,7 @@
     <script src="modules/crypto-js/crypto-js.js"></script>
     <script src="modules/tweetnacl/nacl-fast.min.js"></script>
     <script src="modules/tweetnacl-util/nacl-util.min.js"></script>
+    <script src="modules/password-generator-js/index.js"></script>
     <script src="core/utils.js"></script>
     <script src="core/serverCommunication.js"></script>
     <script src="core/encryption.js"></script>
